# file-editor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  notes.txt
.githooks/: post-commit
.github/workflows/: ci.yml
examples/: append.rs  basic.rs  create.rs  erase.rs  find_lines.rs  insert_after.rs  insert_before.rs  mask.rs  open_rename.rs  prepend.rs  replace.rs  replace_marker.rs
src/: editor.rs  lib.rs  pattern.rs  utils.rs
tests/: basic_tests.rs  content_ops_tests.rs  coverage.rs  edge_coverage_tests.rs  erase_no_match_tests.rs  inline_insertion_tests.rs  inline_multiline_same_indent.rs  inline_no_space_branch.rs  insert_before_no_indent_tests.rs  insert_before_plain_tests.rs  multiline_reindent_tests.rs  not_found_branch_tests.rs  regex_edge_tests.rs  regex_tests.rs  replace_marker_indent_tests.rs  save_without_changes_tests.rs  search_replace_tests.rs  utils_tests.rs
