[package]
name = "file-editor"
version = "0.2.0"
edition = "2024"
description = "Clean, elegant API for creating and editing text files"
license = "MIT"
repository  = "https://github.com/davidwilliam/file-editor"

[dependencies]

[dev-dependencies]
tempfile  = "3"
pretty_assertions = "1"

[features]
default = []
regex = ["dep:regex"]

[dependencies.regex]
version = "1"
optional = true